tests/ui/has-expr-argument.stderr
error: this attribute takes no arguments

  = help: use `#[contracts]`

 --> $DIR/has-expr-argument.rs:1:24
  |
1 | #[contracts::contracts(true)]
  |                        ^^^^
