tests/ui/has-expr-argument.rs
#[contracts::contracts(true)]
fn f() {}

fn main() {}
